--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.html
@@ -121,8 +121,9 @@
                 <div class="row mb-3 mt-4">
                   <div class="col-12 text-end">
                     <span class=" fst-italic mx-2" *ngIf="this.message">{{this.message}}</span>
+                    <button type="button" class="btn btn-success me-2" (click)="openDialogFile()">Thêm nhiều</button>
                     <app-individual-create></app-individual-create>
-                    <app-individual-edit></app-individual-edit>
+<!--                    <app-individual-edit></app-individual-edit>-->
                   </div>
                 </div>
                 <div class="row">
