--- a/C0721G2-livestock-farm-FE/src/app/component/cages/cages-edit/cages-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/cages/cages-edit/cages-edit.component.html
@@ -42,7 +42,7 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label>Mã chuồng nuôi.</label>
-                  <input type="text" class="form-control" readonly formControlName="id"/>
+                  <input type="text" class="form-control" readonly="readonly" formControlName="id"/>
 <!--                  <div class="error alert-danger"-->
 <!--                       *ngIf="updateCage.controls.id.dirty && updateCage.controls.id.hasError('pattern') ">-->
 <!--                    Mã tạo chuồng có định dạng CA-xxxx.-->
