--- a/C0721G2-livestock-farm-FE/src/app/component/employee/employee-delete/employee-delete.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/employee/employee-delete/employee-delete.component.html
@@ -2,8 +2,8 @@
 <!--<mat-dialog-content>{{data}}</mat-dialog-content>-->
 
 <div class="float-end">
-  <button class="btn btn-secondary" mat-button mat-dialog-close (click)="closeDialog()">Cancel</button>
-  <button class="btn btn-danger" mat-button [mat-dialog-close]="true" (click)="delete()">Delete</button>
+  <button class="btn btn-secondary me-2" mat-button mat-dialog-close (click)="closeDialog()">Huỷ</button>
+  <button class="btn btn-danger" mat-button [mat-dialog-close]="true" (click)="delete()">Xoá</button>
 </div>
 
 
