--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-edit/individual-edit.component.html
@@ -1,6 +1,6 @@
 <span [class.alert-danger]="message" (message)="message" [textContent]="message">{{'message'}}</span><!--thẻ modal-->
 <br>
-<button type="button" class="btn btn-warning btn-responsive-margin-bottom text-white" data-bs-toggle="modal"
+<button type="button" class="btn btn-warning btn-responsive-margin-bottom text-white me-2" data-bs-toggle="modal"
         data-bs-target="#myModaledit"><i class="fas fa-edit"></i> Sửa
 </button>
 <div class="modal" id="myModaledit" style="text-align: left">
