--- a/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.css
+++ b/C0721G2-livestock-farm-FE/src/app/component/individual/individual-list/individual-list.component.css
@@ -8,4 +8,12 @@
   cursor: pointer;
   color: red;
 }
+/*table {*/
+/*  table-layout: fixed;*/
+/*  width: 100%;*/
+/*}*/
 
+/*table td {*/
+/*  word-wrap: break-word;         !* All browsers since IE 5.5+ *!*/
+/*  overflow-wrap: break-word;     !* Renamed property in CSS3 draft spec *!*/
+/*}*/
